# backbone--snap--sunroof--acid-state

./: .gitignore  .gitmodules  README.md  cabal.config  potion-soap.cabal  reload.sh
main/: Main.jsmod  Test.jsmod
public/: index.html
public/css/: template.cassius
public/images/reagent-icons/pear/: pear.png.bak
public/js/: app.js  main.js  test.js  tests.js
public/js/backbone-extentions/: router-utilities.js  view-extentions.js  view-utilities.js
public/js/collections/: mixture.js  mixtures.js  reagents.js
public/js/lib/rxjs/: .bower.json
public/js/models/: reagent-model.js  reagentModel.js  reagents.js
public/js/models/collections/: reagents.js
public/js/routers/: mixture-router.js  reagent-router.js  reagentRouter.js
public/js/views/: ReagentInputView.js  ReagentListView.js  laboratory-view.js  mixture-view.js  potion-bottle-view.js  potionmakers-mixture-view.js  reagent-icon-view.js  reagent-input-view.js  reagent-list-view.js  reagent-view.js  reagentIconView.js  reagentView.js  soap-creation-view.js
public/templates/: laboratory.html  mixture.html  potion-bottle.html  potion_makers_mixtures_template.html  reagent.html  reagentInput.html  reagent_icon_template.html  reagent_template.html  reagents.html  reagents_table_template.html  reagents_template.html  soap.html  tests.html
snaplets/heist/templates/: _login.tpl  _new_user.tpl  base.tpl  index.tpl  signup-form.tpl  userform.tpl
src/: .dir-locals.el  Application.hs  Mixture.hs  PotionMaker.hs  PotionSoap.hs  Reagent.hs  ReagentQueries.hs  Site.hs
src/Authentication/: AcidStateBackend.hs  JanrainEngage.hs  JanrainSocialAuthentication.hs  Site.hs
src/CSS/: ReagentIcon.hs  Site.hs
src/JavaScript/: .#ReagentModel.hs  Backbone.hs  Mustache.hs  ReagentCollection.hs  ReagentIconView.hs  ReagentModel.hs  Require.hs  RouterUtilties.hs  Site.hs
src/JavaScript/Backbone/: Collection.hs  Events.hs  Model.hs  View.hs
src/Mixture/: MixtureQueries.hs  Site.hs
src/PotionMaker/: PotionMakerQueries.hs
src/Reagent/: Reagent.hs  ReagentQueries.hs  Site.hs
tests/: PotionSoapTests.hs
tests/Mixture/: Site.hs
