Name:                potion-soap
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable potion-soap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    acid-state                == 0.8.*,
    aeson                     == 0.6.*,
    attoparsec                == 0.10.*,
    bytestring                >= 0.9.1   && < 0.11,
    cereal                    == 0.3.*,
    clientsession             == 0.9.*,
    containers                == 0.5.*,
    directory                 == 1.2.*,
    errors                    == 1.4.*,
    filepath                  == 1.3.*,
    hashable                  == 1.2.*,
    heist                     >= 0.11    && < 0.12,
    ixset                     == 1.0.*,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,     
    mtl                       >= 2       && < 3,
    safecopy                  == 0.8.*,
    shakespeare-css           == 1.0.*,
    snap                      >= 0.11    && < 0.12,
    snap-core                 >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.11,
    snaplet-acid-state        == 0.2.*,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    unordered-containers      == 0.2.*,
    vector                    == 0.10.*,
    xmlhtml                   >= 0.1,

    -- haskell mode needs these for testing
    HUnit                     == 1.2.5.*,
    hspec                     == 1.5.*
  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.10

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

test-suite potion-soap-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs:
     tests,
     src
  main-is:        PotionSoapTests.hs
  build-depends:
     base                      >= 4.4      && < 5,
     hspec                     == 1.5.*,
     HUnit                     == 1.2.5.*